--- a/CustomerChurnPredictionANN.ipynb
+++ b/CustomerChurnPredictionANN.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled20.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKzwTEWDVxdGpQQN88X5rG",
+      "authorship_tag": "ABX9TyNNafSZO3YVIKhd8MA5y31f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,6 +122,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset downloaded from 'https://www.kaggle.com/datasets/blastchar/telco-customer-churn'"
+      ],
+      "metadata": {
+        "id": "mUKxccrGcvyb"
+      }
     },
     {
       "cell_type": "code",
